--- a/CVPR_2019/meeting-report/0619.md
+++ b/CVPR_2019/meeting-report/0619.md
@@ -9,11 +9,180 @@
 ---
 ## Oral Session1
 ### 3D-SIS: 3D Semantic Instance Segmentation of RGB-D Scans
+- 3D instance segmentation
 
+- Method: 2D Feature Extraction; Back Project View Pool
+ - Depth -> 3DCNN
+ -> FUSION
+ -> 3D CNN
+ -> Detection backbone
+ -> mask backbone
+ 
+ - High Accuracy; Significant APPROVEMENT
+ - Geometry + a lot views -> very good accuracy
+ 
+- summary: 
+ - joint color and geometry
+ - multiple frames
+ - full CNN
+ - **106**
+ 
+- **Impressive**
 
 ### Causes and Corrections for Bimodal Multi-Path Scanning With Structured Light
+- Structured light imaging
+- bio-modal multi-path 
 
 ### TextureNet: Consistent Local Parametrizations for Learning From High-Resolution Signals on Meshes
-
+- local surface
+- instance segmentation???
+- Parametrization
+- 
 
 ### PlaneRCNN: 3D Plane Detection and Reconstruction From a Single Image
+- Use planar surfaces to represent the 3D space
+- learning based: 
+- detection-based planar reconstruction sysstem
+- a detection backbone built upon mask-rcnn
+- normal estimation
+- plane parameters and masks
+- jointly refine 
+- also can generated to outdoor scenes
+
+### Occupancy Networks: Learning 3D Reconstruction in Function Space
+- nerual network in 3d
+- existing: voxels; point cloud; mesh ()
+
+- represent mesh as continuous decision boundary of deep learning classifier
+- infinite resolution; artibrary topologies
+- experiment on single view 3d reconstruction
+- experiment on point cloud completion
+- experiment on super-resolution
+- experiment on latent space operation
+
+- **impressive 110**
+
+
+### 3D Shape Reconstruction From Images in the Frequency Domain
+-  3d shape reconstruction (resolution problem)
+- key: axis direction chosen
+- reconstruction in frequency domain
+- dnn; fft
+
+### SiCloPe: Silhouette-Based Clothed People
+- Clothed Human
+- Voxel-based approach (limited resolution)
+
+- support large shape variation
+- ligthweight components
+
+- input: 3d pose
+- input: 2d sihoutte
+- multiview-sihouette synthesis
+- deep visual hult
+
+- a lot of gan
+- impressive sigle view results
+
+### Detailed Human Shape Estimation From a Single Image by Hierarchical Mesh Deformation
+- Human shape from a sigle image
+- former methods have no detail
+
+- hierarchical mesh deformation
+- joint (2d joint); anchor (silhouette); vertex(shading)
+- project; predict; deform
+- similiar with natsume's work
+
+
+### Convolutional Mesh Regression for Single-Image Human Shape Reconstruction
+- RGB images -> 3d shape
+
+- Optmization-based reconstruction
+
+- Regression-based reconstruction
+ - models migth not capture every thing
+ - challenge parameters regression
+ 
+ - solution
+  - vertice-based regression
+  - graph
+ 
+### H+O: Unified Egocentric Recognition of 3D Hand-Object Poses and Interactions
+- hand + object pose
+- rgb only; action recognition; object pose; hand pose
+
+- simul 4 tasks
+ - 3d hand pose estimation
+ - ...
+
+
+
+### Learning the Depths of Moving People by Watching Frozen People
+- video, moving people
+- accurate, dense detph maps
+
+- learn moving people depth by wating fromzen people
+
+- a lot of input to predict depth, comparing with mvs depth
+- TUM RGBD dataset
+
+- **impressive result**
+
+### Extreme Relative Pose Estimation for RGB-D Scans via Scene Completion
+- relative pose estimation
+- from large overlap to small/non overlap
+
+- reduced 
+- multimodal-predcition
+- scan completion
+
+
+### A Skeleton-Bridged Deep Learning Approach for Generating Meshes of Complex Topologies From Single RGB Images
+- eisting 3d decoders cannot deal with the complexity
+- skeleton-bridged
+- stage-wise
+- multi-scale, multi-step process
+
+- skeleton inference (MLPs)
+
+
+### Learning Structure-And-Motion-Aware Rolling Shutter Correction
+- rolling shutter camera
+- deal with rolling shutter deformation
+- training data generation
+
+### PVNet: Pixel-Wise Voting Network for 6DoF Pose Estimation
+- 6dof object pose estimation
+- related work: template matching; keypoint-based method
+
+- How to find 3D-2D correspondences
+ - using cnnns to detect semantic keypoints
+ - heatmap representation for keypoint
+
+- challenges
+ - occlusion
+ - truncation
+
+- How
+ - vector-field representation for keypoints
+  - dense voting; handle invisible keypoints; provide keypoint uncertainty
+  
+ - dataset: YCB-video
+ - works even for occluded objects
+
+
+
+---
+## Poster Session
+
+### Learning Without Memorizing (59)
+
+---
+## Oral Session2
+
+
+
+---
+## Poster Session2
+### Neural Rerendering in the Wild 142
+### Listen to the Image 125
