--- a/CVPR_2019/meeting-report/0619.md
+++ b/CVPR_2019/meeting-report/0619.md
@@ -170,8 +170,6 @@
  - dataset: YCB-video
  - works even for occluded objects
 
-
-
 ---
 ## Poster Session
 
@@ -179,8 +177,243 @@
 
 ---
 ## Oral Session2
+### Grounded Video Description
+- automatic video description
+
+- explict grounding
+ - missing dataset
+ 
+- video description datasets (w/grounding)
+ - ActivityNet-Entities dataset
+ 
+ 
+- models
+ - region features
+ - grouding module
+ - grounding aware features
+
+- results
+ - no explicit different betweeen supervised and un-supervised methods
+  
+### Streamlined Dense Video Captioning
+- description of all events + Localization (dense video captioning)
+
+- propose
+ - event sequence generation - sequential captioning
+ - event sequence generation with high coherent
+
+- RL is important for dense captioning
+
+### Adversarial Inference for Multi-Sentence Video Description
+- multi-sentence video description
+
+- goal: visual relevant; fluent sentences; coherent.
+
+- hyper discriminator
+ - visual 
+ - language
+ - paired
+ 
+- results
+ - diverse
+ - lower repeat
+ 
+### Unified Visual-Semantic Embeddings: Bridging Vision and Language With Structured Meaning Representations
+- learning joint representation space for language and vision
+ - rich but few
+ - paired but noisy
+ 
+- semantic encoding
+- image encoding
+- alignment
+
+- adversarial attack for language is ok
+
+- visual grounding of textual concepts
+ 
+
+### Learning to Compose Dynamic Tree Structures for Visual Contexts
+-  explicit visual context structures
+
+- construction of VCTree
+ - validity score matrix -> -> binary
+ 
+ - framework
+  - faster-rcnn
+  - tree construction
+  
+ - reinforce learning to build tree
+ 
+ - useful for vqa task
+
+- **impressive**
+
+### Reinforced Cross-Modal Matching and Self-Supervised Imitation Learning for Vision-Language Navigation
+- vision-language navigation
+
+- cross-modal grounding
+- ill-posed feedback
+
+- cross-modal grounding
+- ill-posed feedback
+ - reward when attend the goal
+- generalization
+ 
+- reinforced cross-modal matching (RCM)
+ - extrinsic reward
+ - intrinsic reward -> matching critic 
+
+- generalization
+ - self-supervised imitation learning 
+  - learning from the past help adapting to unknown environments
+  
+- SIL is important from unseen environment
 
 
+
+### Dynamic Fusion With Intra- and Inter-Modality Attention Flow for Visual Question Answering
+- self-attention is widely used in modeling the relationship inside modality
+- co-attention has been widely used in modeling relationship between different modality
+
+### Cycle-Consistency for Robust Visual Question Answering
+- VQA models are brittle
+
+- evaluating and benchmarking models for robustness
+ - be robust to language changing
+ 
+- cycle consistent training scheme 
+ - vqa loss
+ - question consistency loss
+ - answer consistency loss
+
+- VQA-Rephrasings dataset for evaluation of
+
+- does cycle consistent training make models robust: yes; very explicit
+ 
+- **impressive**
+
+
+### Embodied Question Answering in Photorealistic Environments With Point Cloud Perception
+- depth information via point clouds
+
+- created EQA Matterport Dataset
+ 
+ - Vision
+  - perception for RGB (ResNet50)
+  - perception for Point Clouds (PointNet++)
+
+- Ablation
+ - visual variation
+ - language
+ - memory
+ 
+ - results
+  - pc is better for occlusion
+  - pc + rgb is better for visual
+  
+ 
+ - aihabitat.org
+ - **good**
+
+### Reasoning Visual Dialogs With Structural and Partial Observations
+- Graph for visual dialog
+ - represent the dialog as graph with partial observation
+
+- encode dialog as Markov Random Field
+- fit a graph cnn to visual dialog
+
+
+### Recursive Visual Attention in Visual Dialog
+- visua coreference resolution
+
+- selectively review history
+- only browsing dialog history when needed
+- only topic-related history is backtracted
+
+
+- **good**
+
+- **good**
+
+
+
+### Two Body Problem: Collaborative Visual Task Completion
+- how do we get agents to lift furniture
+
+- two agent are visual navigate to the goal
+- coordinate to lift the tv at the same time
+- talk stage
+- reply stage
+
+- communication helps
+
+- **interesting*
+
+### GQA: A New Dataset for Real-World Visual Reasoning and Compositional Question Answering
+- spatial; comparative; logical; relational; compositional (diversal reasoning skills)
+- new metrics: consistency; validity; plausibility; grounding
+
+
+### Text2Scene: Generating Compositional Scenes From Textual Descriptions
+- compositional representation
+- seq2seq framework: text2scene
+- synthetic image generaton: generation + inpainting
+
+- **good**
+
+### From Recognition to Cognition: Visual Commonsense Reasoning
+- blank -- problem
+- dataset 
+- **vcr**
+ - 290 question
+ - adversarial matching
+ - recognition to cognition networks
+ 
+ - visualcommonsensereasoning.com
+ 
+- **impressive**
+
+### The Regretful Agent: Heuristic-Aided Navigation Through Progress Estimation
+- goal-driven navigation
+- new: backtracking
+
+- self-monitoring agent: progress estimation
+- view as navigation graph
+
+- progress estimation as heuristic 
+
+- end-to-end learned backtracking agent (purely greedy)
+- progress marker
+ - progress marker
+  - know which directions have been visited
+  
+### Tactical Rewind: Self-Correction via Backtracking in Vision-And-Language Navigation
+- plug-n-play
+
+- vision-and-language navigation
+- frontier-aware search with backtrack
+
+- The frontier
+
+- lost, and backtrack
+
+- achieved new SOTA
+
+
+### Learning to Learn How to Learn: Self-Adaptive Visual Navigation Using Meta-Learning
+- Task 
+
+- AI2-THOR Dataset
+
+- Initial model parameters
+- initialize model
+- take k steps
+- compute self-sueprvised interaction loss
+- compute adapted parameters
+- complete navigation episode
+- compute supervised navigation loss
+
+- **impressive**
 
 ---
 ## Poster Session2
