--- a/CVPR_2019/meeting-report/0620.md
+++ b/CVPR_2019/meeting-report/0620.md
@@ -1,15 +1,133 @@
 # 0619
 
 ## Indexing:
-- [Oral Session1](#Oral Session1)
+- [Oral Session1](#Oral-Session1)
 ---
 ## Oral Session1
 ### Shifting More Attention to Video Salient Object Detection
--
+- Challenge of attention shift
+- Attention + mask -> Human-like attention
 
+- New dataset: NACSOD (200 videos)
+- Baseline: SSAV
+ - static saliency
+ - dynamic saliency
 
-
+- 36 methods
+- benchmarking results:
+ - proposed best
+ 
+- **Impressive**
 
 ### Neural Task Graphs: Generalizing to Unseen Tasks From a Single Video Demonstration
+- One-Shot Visual Imitation Learning
+ - learning from a video of new task
+ 
+- current: tasking learning
+ - reinforcement learning
+ - imitation learning
+ 
+- meta-learning for generalization
+
+- video demonstration -> task graph generator -> nerual task graph
+                                              -> current observation -> task graph executor
+- task graph based execution                                          
+
+
+- task graph for surgical videos
+
+- **impressive**
+
 
 ### Beyond Tracking: Selecting Memory and Refining Poses for Deep Visual Odometry
+- Classic VO/SLAM methods
+
+- Deal with using gloobal information in long sequences
+
+- remembering & refining
+- refining
+ - attention-based feature selection
+ - propagate refined results
+ 
+- tracking, remembering and refining
+
+- **Impressive**
+
+### Image Generation From Layout
+- Scene graph are not straight-forwardTraining
+
+- Object composer
+ - object encoder
+ - object Fuser
+ - Image Decoder
+ 
+- Object Estimator
+
+- **User Graph**
+- **Diversity?**
+
+
+### Multimodal Explanations by Predicting Counterfactuality in Videos
+- Visual-linguisitic 
+
+
+### Learning to Explain With Complemental Examples
+- no comments
+
+
+### HAQ: Hardware-Aware Automated Quantization With Mixed Precision
+- Emergent Hardware Supports Mixed Precision
+- fixed-Precision Quantization
+
+- Critic-Actor Module
+- HAQ Outperforms ...?
+
+- MobileNet
+- FPGA
+
+### Content Authentication for Neural Imaging Pipelines: End-To-End Optimization of Photo Provenance in Complex Distribution Channels
+- model the entire neural image pipeline and a forensic analysis network
+- ML of imaging
+- optimize camera design for security
+
+
+### Inverse Procedural Modeling of Knitwear
+- Knitting instracution
+
+- given image of kinnited closing
+- output: process of knitting
+
+- Process
+ - align 
+ - select temple
+ 
+ - idea: 
+
+
+### Estimating 3D Motion and Forces of Person-Object Interactions From Monocular Video
+- Learn how to interact with objects
+- output graph and force
+
+- two-stage
+- new dataset: handtool videos
+ - barbell
+ - hammer
+ - ...
+
+### DeepMapping: Unsupervised Map Estimation From Multiple Point Clouds
+- Training and testing
+- use nn to model traditional registration process
+- train a nn for each registration problem
+
+- deep learning for point cloud registration
+
+
+### End-To-End Interpretable Neural Motion Planner
+- Sensor map -> detection -> prediction -> motion planing -> driving command
+
+- Sensor Map -> Neural Motion Planner -> Driving Command
+
+
+
+
+
