--- a/Video Captioning/CVPR2019.md
+++ b/Video Captioning/CVPR2019.md
@@ -32,12 +32,13 @@
 
 - Comparison
 
+<img src="https://github.com/qiuyue1993/Notes/blob/master/Video%20Captioning/Images/Paper-Summarize_SDVC_Comparison.png" width="600" hegiht="400" align=center/>
 
 ### Framework
 
 #### Overall Framework
 
-- 
+<img src="https://github.com/qiuyue1993/Notes/blob/master/Video%20Captioning/Images/Paper-Summarize_SDVC_Overall-framework.png" width="600" hegiht="400" align=center/>
 
 #### Event Proposal Network
 - Input: video
