--- a/Video Captioning/CVPR2019.md
+++ b/Video Captioning/CVPR2019.md
@@ -3,6 +3,8 @@
 ## Indexing:
 - [Streamlined Dense Video Captioning (Oral)](#Streamlined-Dense-Video-Captioning)
 - [Memory-Attended Recurrent Network for Video Captioning](#Memory-Attended-Recurrent-Network-for-Video-Captioning)
+- [Object-Aware Aggregation With Bidirectional Temporal Graph for Video Captioning](#Object-Aware-Aggregation-With-Bidirectional-Temporal-Graph-for-Video-Captioning)
+- [Spatial-Temporal Dynamics and Semantic Attribute Enriched Visual Encoding for Video Captioning](#Spatial-Temporal-Dynamics-and-Semantic-Attribute-Enriched-Visual-Encoding-for-Video-Captioning)
 - [References](#References)
 
 ---
@@ -91,12 +93,53 @@
 - **Why they train the Sequential Captioning Network with RL?**
 ---
 ## Memory-Attended Recurrent Network for Video Captioning
+### Abstract
+**
 
 
 
+### Framework
+
+
+### Dataset, Evaluation Metrics, and Results
+
+
+### Thoughts
+
+---
+## Object-Aware Aggregation With Bidirectional Temporal Graph for Video Captioning
+### Abstract
+**
+
+
+
+### Framework
+
+
+### Dataset, Evaluation Metrics, and Results
+
+
+### Thoughts
+
+--- 
+## Spatial-Temporal Dynamics and Semantic Attribute Enriched Visual Encoding for Video Captioning
+### Abstract
+**
+
+
+
+### Framework
+
+
+### Dataset, Evaluation Metrics, and Results
+
+
+### Thoughts
 
 --- 
 ## References
 - [Streamlined Dense Video Captioning](https://arxiv.org/pdf/1904.03870.pdf) 
 - [Memory-Attended Recurrent Network for Video Captioning](https://arxiv.org/pdf/1905.03966.pdf)
+- [Object-Aware Aggregation With Bidirectional Temporal Graph for Video Captioning](https://arxiv.org/pdf/1906.04375.pdf)
+- [Spatial-Temporal Dynamics and Semantic Attribute Enriched Visual Encoding for Video Captioning](https://arxiv.org/pdf/1902.10322.pdf)
 ---
