--- a/Video Captioning/CVPR2019.md
+++ b/Video Captioning/CVPR2019.md
@@ -94,17 +94,60 @@
 ---
 ## Memory-Attended Recurrent Network for Video Captioning
 ### Abstract
-**
+#### Conventional Video Captioning
+- Encoder-decoder framework
+- Focus on **only one source video**
 
+*Disadvantage*
+- Cannot capture the **multiple visual context information** of a word appearing in more than one relevant videos 
 
+#### Proposed Video Captioning
+- Memory-Attended Recurrent Network (MARN)
+- **Memory structure**
+- **Explore the full-spectrum correspondence** between a word and its various similiar visual contexts **across** videos in **training data**
+- Enable **modeling the compatibility between adjacent words explicitly**
+
+#### Illustration
+
+- 
 
 ### Framework
+#### Overall Framework
 
+#### Components
+- Encoder: extracting features from source video (both 2D and 3D)
+- Decoder: Attention-based Recurrent Decoder for captioning
+- Decoder: Attended Memory Decoder (enhance the captioning quality)
 
 ### Dataset, Evaluation Metrics, and Results
+#### Datasets
+*Microsoft Research-Video to Text (MSR-VTT)*
+- 10,000 video clips
+- 20 general categories
+- 20 human annotated natural sentences collected via AMT per video
+- 6,513, 497, 2,990 for training, test, test
 
+*Microsoft Research Video Description Corpus (MSVD)*
+- 1,970 short video clips 
+- Collected from YouTube
+- A single activity for every video
+- 40 captions / video
+- 1,200, 100, 670 for training, validation, test
+
+#### Evaluation Metrics
+- CIDEr
+- METEROR
+- ROUGE-L
+- BLEU
+
+#### Results
+- BLEU-4: 40.4
+- METEROR: 28.1
+- ROUGE-L: 60.7
+- CIDEr: 47.1
 
 ### Thoughts
+- Exciting Idea
 
 ---
 ## Object-Aware Aggregation With Bidirectional Temporal Graph for Video Captioning
