--- a/Video Captioning/CVPR2019.md
+++ b/Video Captioning/CVPR2019.md
@@ -109,10 +109,12 @@
 
 #### Illustration
 
-- 
+<img src="https://github.com/qiuyue1993/Notes/blob/master/Video%20Captioning/Images/Paper-Summarize_MARN_Comparison.png" width="600" hegiht="400" align=center/>
 
 ### Framework
 #### Overall Framework
+
+<img src="https://github.com/qiuyue1993/Notes/blob/master/Video%20Captioning/Images/Paper-Summarize_MARN_Overall-framework.png" width="600" hegiht="400" align=center/>
 
 #### Components
 - Encoder: extracting features from source video (both 2D and 3D)
