--- a/Video Captioning/CVPR2019.md
+++ b/Video Captioning/CVPR2019.md
@@ -154,17 +154,48 @@
 ---
 ## Object-Aware Aggregation With Bidirectional Temporal Graph for Video Captioning
 ### Abstract
-**
+#### Intuition
+- It is important for video captioning to capture **salient objects** with their **detailed temporal dynamics**
+- And represent them using **discriminative spatio-temporal representations**
 
+#### Proposed approach
+- OA-BTG: object-aware aggregation with bidirectional temporal graph
+- OA-BTG learns representations by performing **object-aware local feature aggregation** on **detected object regions**
 
+#### Main novelties and advantages
+*Bidirectional temporal graph*
+- A bidirectional temporal graph is constructed **along and reversely along** the temporal graph
+- Which provides **complementary ways** to capture the temporal trajectories for each salient object
+
+*Object-aware aggregation*
+- Learnable VLAD (**Vector of Locally Aggregated Descriptors**) models are constructed on **object temporal trajectories** and **global frame sequence**
+- A **hierachical attention mechanism** is also developed to **distinguish different contributions of multiple objects**
 
 ### Framework
+#### Overall Framework
 
+<img src="https://github.com/qiuyue1993/Notes/blob/master/Video%20Captioning/Images/Paper-Summarize_OA-BTG_Overall-framework.png" width="600" hegiht="400" align=center/>
+
+#### Bidirectional Temporal Graph
+- Input: video
+- First, extract frames and multiple object regions
+- Next, construct bidirectional temporal graph 
+
+#### Object-aware Aggregation
+- Perform object-aware aggregation to **aggregate the local features of object regions and global frames** into discriminative **VLAD representations** using learnable VLAD models
+
+#### Decoder
+- Input: learned object and frame VLAD representation
+- Using GRU unites to generate descriptions
+- Hierachical attention is applied
 
 ### Dataset, Evaluation Metrics, and Results
 
 
 ### Thoughts
+- Focus on the spatio-temporal representations of salient objects
+- Temporal and spatial attention for object features
+- Temporal attention for global frames features 
 
 --- 
 ## Spatial-Temporal Dynamics and Semantic Attribute Enriched Visual Encoding for Video Captioning
