--- a/Video Captioning/CVPR2019.md
+++ b/Video Captioning/CVPR2019.md
@@ -190,6 +190,20 @@
 - Hierachical attention is applied
 
 ### Dataset, Evaluation Metrics, and Results
+#### Datasets
+- MSVD
+- MSR-VTT
+
+#### Evaluation Metrics
+- BLEU@4
+- METEOR
+- CIDEr
+
+#### Results
+*MSVD*
+- BLEU@4: 56.9
+- METEOR: 36.2
+- CIDEr: 90.6
 
 
 ### Thoughts
