--- a/Video Captioning/CVPR2019.md
+++ b/Video Captioning/CVPR2019.md
@@ -222,9 +222,23 @@
 
 
 ### Dataset, Evaluation Metrics, and Results
+#### Datasets
+- MSVD
+- MSR-VTT
 
+#### Evaluation Metrics
+- BLEU
+- METEOR
+- CIDEr
+- ROUGE-L
+
+#### Results
+*MSVD*
+- METEOR: 33.7
 
 ### Thoughts
+- **Aggregating** the information as much as possible ?! (This paper aggregates the information from "object detection", "2D frames", "video clips")
+- As the differences between different methods are small, methods with highly **interpretability** are acceptable? 
 
 --- 
 ## References
