--- a/Video Captioning/CVPR2019.md
+++ b/Video Captioning/CVPR2019.md
@@ -214,12 +214,26 @@
 --- 
 ## Spatial-Temporal Dynamics and Semantic Attribute Enriched Visual Encoding for Video Captioning
 ### Abstract
-**
+#### Intuition
+- Careful designing of **visual features** is important
 
+#### Proposed Method
+- Present a **visual feature encoding technique** to generate **semantically rich captions** using GRUs
 
+#### Visual Feature Encoding
+- Embeds **rich temporal dynamics in visual features** by **hierachically applying Short Fourier Transform to CNN features** of the whole video
 
 ### Framework
+#### Overall Framework
 
+<img src="https://github.com/qiuyue1993/Notes/blob/master/Video%20Captioning/Images/Paper-Summarize_Aggregation_Overall-framework.png" width="600" hegiht="400" align=center/>
+
+#### Process
+- The video clips and frames are process with 3D and 2D CNNs respectively.
+- **Neuron-wise Short Fourier Transform** is applied **hierarchically** to the extraction layer activations of these networks (for the whole video)
+- Relevant high-level object semantics and action semantics are derived using the intersection of vocabulary from the language model dictionary with the labels of 3D CNN and Object Detector.
+- The resulting codes are compressed with a fully-connected layer 
+- Finally, the output is used to learn a multi-layer GRU as a language model
 
 ### Dataset, Evaluation Metrics, and Results
 #### Datasets
@@ -239,7 +253,8 @@
 ### Thoughts
 - **Aggregating** the information as much as possible ?! (This paper aggregates the information from "object detection", "2D frames", "video clips")
 - As the differences between different methods are small, methods with highly **interpretability** are acceptable? 
-
+- The careful designing of visual feature is important
+- Why **Short Fourier Transform**
 --- 
 ## References
 - [Streamlined Dense Video Captioning](https://arxiv.org/pdf/1904.03870.pdf) 
