--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -1,7 +1,7 @@
 # 3rd Workshop on Closing the Loop Between Vision and Language (CLVL)
 
 ## Indexing:
-- [Opening Remarks](#Openning-Remarks)
+- [Opening Remarks](#Opening-Remarks)
 - [Invited Talk-Sanja Fidler](#Invited-Talk-Sanja-Fidler)
 - [Spotlight Presentation 1](#Spotlight-Presentation-1)
 - [Invited Talk-Svetlana Lazabnik](#Invited-Talk-Svetlana-Lazabnik)
