--- a/ICCV_2019/meeting_report/1029.md
+++ b/ICCV_2019/meeting_report/1029.md
@@ -1,16 +1,16 @@
 # Main Conference Day 1
 
 ## Indexing:
-- [Oral 1.1](#Oral-1.1)(**Hall D,0915-1030**)
-- [Poster 1.1](#Poster-1.1)
-- [Oral 1.2B](#Oral-1.2B)(**Hall **)
-- [Poster 1.2](#Poster-1.2)
+- [Oral 11](#Oral-11)
+- [Poster 11](#Poster-11)
+- [Oral 12B](#Oral-12B)
+- [Poster 12](#Poster-12)
 --
-## Oral 1.1
+## Oral 11
 
 
 ---
-## Poster 1.1
+## Poster 11
 ### Scene Understanding (**100-107**)
 #### SpaceNet MVOI: A Multi-View Overhead Imagery Dataset
 
@@ -24,7 +24,7 @@
 #### A Differential Volumetric Approach to Multi-View Photometric Stereo
 
 ---
-## Oral 1.2B
+## Oral 12B
 - Multi-View Geometry, 3D Scene Understanding
 1.1A
 - A Camera That CNNs: Towards Embedded Neural Networks on Pixel Processor Arrays
@@ -44,7 +44,7 @@
 
 
 ---
-## Poster 1.2
+## Poster 12
 
 ### 3D From Single View & RGBD (**89-94**)
 
