--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -11,14 +11,25 @@
 - [VATEX Challenge](#VATEX-Challenge)
 - [LSMDC Challenge](#LSMDC-Challenge)
 - [Invited Talk-Devi Parikh and Jiasen Lu](#Invited-Talk-Devi-Parikh-and-Jiasen-Lu)
----
-
-## Opening Remarks
 
 ---
-
 ## Invited Talk-Sanja Fidler
+Learning Representations of Vision and Language
+- Multimodal Learning: more than one modality as input
+- Difficulty: different statistical properties
+- Bilinear model is more expressive
+- CB for uni-modality
+- MCB
+- Low-rank bilinear (ICLR 2017)
+- MLB, MUTAN, MFB
+- Scaled dot-product
+- Multi-head attention
+- Co-attention
+- Bilinear attention networks: joint attention based on low-rank 
+- Deep modular co-attention: transformer-based approaches
+- Low-rank factorization!
 
+http://wityworks.com/
 
 ---
 ## Spotlight Presentation 1
