--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -33,8 +33,50 @@ http://wityworks.com/
 
 ---
 ## Spotlight Presentation 1
+- Are we asking the right questions in MovieQA? 
+Previous works did not obtain high accuracy than QA only.
+Wikiword embeddingmodel: SOTA on 4/5 on movieQA categories.
 
+- Referring expression
+A dataset with depth, images and especially for the spatial relationship
+Applications: generation of expression, understanding
 
+- Evalutating text-to-image
+Evalutating is difficult in image captioning
+Is image retieval good? (No)
+BISON dataset for binary picking: good for evaluation.
+Can be used for both image captioning and image retrieval
+
+- Visual storytelling
+Visual storytelling does not equal to image captioning.
+Each narrative story should have one sequence of anchor words
+SOTA on visual storytelling dataset.
+
+- Why does a vqa have different answers
+crowd answers matters
+Novel problem, new dataset, algorithm to learn why different answers arise.
+Connection with VizWiz dataset.
+
+- Diversity-accuracy tradeoff in image captioing
+ALLSPICE
+a new metric to evaluate image cpations: accuracy and diversity.
+Tree structure.
+Reinforcement learning hurts diversity.
+Top-k and nucleus are marginally better.
+
+- nocaps: novel object captioning at scale
+SOTA on COCO dataset.
+Biased coco image captioning dataset.
+Training: coco, open images
+Still a much harder benchmark.
+
+- Image captioning with versy scarce supervised data: adversarial semi-supervised
+Leveraging unpaired caption data.
+Used GAN to decide the true caption
+
+- 
+faster-r-cnn trained to predict object+attributes in visual genome
+decoupled bbox, region ultra
 ---
 ## Invited Talk-Svetlana Lazabnik
 - A Critical Look at Visual Grounding
