--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -80,7 +80,7 @@ decoupled bbox, region ultra
 ---
 ## Invited Talk-Svetlana Lazabnik
 - A Critical Look at Visual Grounding
-
+Grounding is fundamental 
 ---
 ## Invited Talk-Yejin Choi
 - Can’t Close the Loop without Commonsense Models
