--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -84,7 +84,9 @@ Grounding is fundamental
 ---
 ## Invited Talk-Yejin Choi
 - Can’t Close the Loop without Commonsense Models
-
+Visual Commonsense dataset (Answer Justification)
+Big gap between human and SOTA methods
+Definition of Common Sense
 
 ---
 ## Spotlight Presentation 2
