--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -87,6 +87,8 @@ Grounding is fundamental
 Visual Commonsense dataset (Answer Justification)
 Big gap between human and SOTA methods
 Definition of Common Sense
+ATomic: cases; effects;
+ACL 2019: COMeT
 
 ---
 ## Spotlight Presentation 2
