--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -92,6 +92,29 @@ ACL 2019: COMeT
 
 ---
 ## Spotlight Presentation 2
+- Visual Question Generation
+- Learning Semantic Sentence Embeddings using Pair-wise Discriminator
+Sentence have different forms.
+- Sequential Latent Spaces for Modeling the Intention During Diverse Image Captioning
+Sequence CVAEs
+Adding a kind of intention model
+- Reinforcing an Image Caption Generator using Off-line Human Feedback (Sequence CVAEs)
+Improve image captioning model using caption rating dataset
+- Use What You Have: Video retrieval using representations from collaborative experts
+Collaborative experts (a lot of different expert methods)
+We need collaborative experts and also we need all kinds of experts
+
+- ICDAR 2019 Competition on Scene Text Visual Question Answering (Main conference)
+A dataset
+Scene text visual question answering
+A new evaluation metric 
+
+- Recognizing and Characterizing Natural Language Descriptions of Visually Complex Images
+Visual complexity, Images with multi-objects.
+Human evaluation: answering time 
+
+- Adversarial Learning of Semantic Relevance in Text to Image Synthesis
+Diversity in text to image synthesis
 
 
 ---
@@ -112,6 +135,7 @@ ACL 2019: COMeT
 ---
 ## Invited Talk-Devi Parikh and Jiasen Lu
 - V&L --> V ∪ L: Breaking away from task- and dataset-specific vision+language 
+
 
 
 ---
