--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -124,7 +124,7 @@ Diversity in text to image synthesis
 
 ---
 ## VATEX Challenge
-
+- [paper link](https://arxiv.org/pdf/1904.03493.pdf)
 
 --- 
 ## LSMDC Challenge
