--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -128,7 +128,7 @@ Diversity in text to image synthesis
 
 --- 
 ## LSMDC Challenge
-
+- [Challenge page](https://sites.google.com/site/describingmovies/home?authuser=0)
 
 
 
