--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -118,9 +118,24 @@ Diversity in text to image synthesis
 
 
 ---
-## Invited Talk-Gunhee Kim
+## Invited Talk Gunhee Kim
 - Audio captioning and knowledge-grounded conversation
+First audio captioning dataset in the wild.
+Video captioning is different from video captioning
+50K 10sec audio-caption pairs
+8 super-categories (72 categories)
+Annotation inteface: word label pairs from audioset as hints
+LSTM with topdown attention and aligned semantic attention  (temporal & semantic attention)
+Do the captions map the audio uniquely?
+What can we do to improve the caption quality? (VGGish, AlighedAtt, TopDown attention)
 
+- Sequential Latent Knowledge Selection for Knowledge-grounded Dialog
+s2s model tend to produce non-specific response
+Incorporating knowledge to generate informative response
+Wizard of Wikipedia (WoW) dataset
+Two speakers: Wizard and appretice, pick topic and speak first
+Knowledge selection and Utterance Prediction
+Tracking selection along dialogue can reduce scope of knowledge selection
 
 ---
 ## VATEX Challenge
