--- a/ICCV_2019/meeting_report/1028.md
+++ b/ICCV_2019/meeting_report/1028.md
@@ -140,12 +140,33 @@ Tracking selection along dialogue can reduce scope of knowledge selection
 ---
 ## VATEX Challenge
 - [paper link](https://arxiv.org/pdf/1904.03493.pdf)
+41.3K unique video clips, 600 human activities
+Longer sentences than MSR-VTT
+0 duplicated sent rate
+task 1: multilingual video captioning
+task 2: Video-guided machine translation 
+Metrics: addition of four popular metrics
+
+- Multi-modal information fusion and multi-stage training strategy for video captioning
+Encoder-decoder
+make uses of attributes, attention, region, etc.
+
+Multi-modal Information (appeaance, motion,..., maybe audio)
+
+Multi-stage training strategy (gumble softmax sampling to replace scheduled, self-critical based reinforcement learning)
+
+### Runner-up Presentation
+multi-level aspects (Glo bal multimodal features;temporal encoding branch; spatial encoding brach)
+self-critic RL
+VSE
 
 --- 
 ## LSMDC Challenge
 - [Challenge page](https://sites.google.com/site/describingmovies/home?authuser=0)
-
-
+200 videos
+Still a large gap to human performance
+Task 1: multi-clips multi-sentence description generation
+Task 2: fill in the characters 
 
 ---
 ## Invited Talk-Devi Parikh and Jiasen Lu
